spacing of elements fixed on mobile

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -135,14 +135,14 @@
 
 .grid-container-1-2 {
   width: 95%;
-  padding-bottom: 40px;
+  padding-bottom: 4rem;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
   row-gap: 20px;
   gap: 20px;
   text-align: left;
   display: grid;
-  margin: 60px auto auto;
+  margin:auto;
   overflow:hidden;
 
 }
@@ -188,6 +188,12 @@
   font-weight: 600;
   color: rgb(51, 51, 51);
 }
+
+.grid-container-1-2 .golf-charger-images {
+  margin-top:3rem
+}
+
+
 
 .grid-container-1-2 .golf-charger-desc {
   font-size: 1rem;
